[gd_scene load_steps=8 format=2]

[ext_resource path="res://Virus/ProtoVirus.gd" type="Script" id=1]
[ext_resource path="res://assets/Virus/bottom.png" type="Texture" id=2]
[ext_resource path="res://assets/Virus/aureole.png" type="Texture" id=3]
[ext_resource path="res://assets/font/GameFont.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Anim"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyNode/tentacle1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyNode/tentacle2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, -315.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 99.1816

[node name="ProtoVirus" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Anim"
anims/Anim = SubResource( 1 )

[node name="BodyNode" type="Node2D" parent="."]

[node name="tentacle1" type="Sprite" parent="BodyNode"]
rotation = 3.0797
texture = ExtResource( 2 )

[node name="tentacle2" type="Sprite" parent="BodyNode"]
rotation = -2.2943
texture = ExtResource( 2 )

[node name="body" type="Sprite" parent="BodyNode"]
texture = ExtResource( 3 )

[node name="Label_Blood" type="Label" parent="BodyNode"]
margin_left = -91.0427
margin_top = -33.7826
margin_right = 94.9573
margin_bottom = 32.2174
custom_fonts/font = SubResource( 2 )
text = "1000"
align = 1
valign = 1

[node name="Area2D" type="Area2D" parent="BodyNode"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyNode/Area2D"]
shape = SubResource( 3 )

[node name="TweenNode" type="Tween" parent="."]
